--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,1 +1,2 @@
 <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter" rel="stylesheet">
+<link rel="preload" href="https://fonts.googleapis.com/css?family=Amatic+SC:300,400,700" rel="stylesheet">
